[package]
name = "Find_key"
version = "1.0.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#это нужно для иконки
build = "build.rs"

[dependencies]
rand = "0.8.5"
bitcoin = "0.31.0"
secp256k1 = {version = "0.28.0", features = ["rand"]}
serde = {version = "1.0.130", features = ["derive"]}
serde-pickle = "1.0"
num_cpus = "1.13.0"
tokio = { version = "1.20.1", features = ["full"] }

tiny-hderive = "0.3.0"
tiny-keccak = {version = "2.0.2", features = ['keccak']}
libsecp256k1 = "0.7.0"
serde_json = "1.0.107"
bincode = "1.3.3"
bloomfilter = "1"
hex = "0.4.3"
rustils="0.1.23"
sha2 = "0.10.8"
base58 = "0.2.0"
eip55 = "0.4.0"
sv = "0.2.2"
bitcoincash-addr = "0.5.2"
ripemd="0.1.3"

#это нужно для иконки
[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"